[gd_scene load_steps=56 format=2]

[ext_resource path="res://resources/scripts/JetSkins.gd" type="Script" id=1]
[ext_resource path="res://resources/backgrounds/startup.png" type="Texture" id=2]
[ext_resource path="res://resources/gamefonts/Pacifico.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/jets/jet1.png" type="Texture" id=4]
[ext_resource path="res://resources/jets/jet3.png" type="Texture" id=5]
[ext_resource path="res://resources/jets/jet4.png" type="Texture" id=6]
[ext_resource path="res://resources/Bullets/Bullet .png" type="Texture" id=7]
[ext_resource path="res://resources/Bullets/Bullet2.png" type="Texture" id=8]
[ext_resource path="res://resources/Bullets/Bullet3.png" type="Texture" id=9]
[ext_resource path="res://resources/icon/back.png" type="Texture" id=10]
[ext_resource path="res://resources/icon/home.png" type="Texture" id=11]
[ext_resource path="res://resources/icon/ad.png" type="Texture" id=12]
[ext_resource path="res://resources/gamefonts/starcraft.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://resources/icon/coin.png" type="Texture" id=14]
[ext_resource path="res://resources/gamefonts/jumbo.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://resources/CoinAmountLabel.gd" type="Script" id=16]
[ext_resource path="res://regionpopup.tres" type="StyleBox" id=17]
[ext_resource path="res://resources/icon/close.png" type="Texture" id=18]
[ext_resource path="res://unlockbutton.tres" type="StyleBox" id=19]
[ext_resource path="res://resources/gamefonts/SEVESBRG.TTF" type="DynamicFontData" id=20]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=21]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.666667, 0.0705882, 0.0705882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.666667, 0.0705882, 0.0705882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.666667, 0.0705882, 0.0705882, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.109804, 0.0627451, 0.690196, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.109804, 0.0627451, 0.690196, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.109804, 0.0627451, 0.690196, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.976471, 0.34902, 0.34902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.368627, 0.384314, 0.756863, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.976471, 0.34902, 0.34902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=16]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.368627, 0.384314, 0.756863, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.976471, 0.34902, 0.34902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.368627, 0.384314, 0.756863, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.239216, 0.701961, 0.298039, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.368627, 0.384314, 0.756863, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.239216, 0.701961, 0.298039, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.980392, 0.141176, 0.0313726, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.980392, 0.141176, 0.0313726, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.980392, 0.141176, 0.0313726, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.956863, 0.776471, 0.156863, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=27]
size = 20
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=28]
size = 90
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=29]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.223529, 0.901961, 0.0823529, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=31]
size = 80
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=32]
size = 60
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.223529, 0.901961, 0.0823529, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=34]
size = 50
font_data = ExtResource( 20 )

[node name="JetSkins" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 2 )
centered = false

[node name="TitleLabel" type="Label" parent="Control"]
margin_left = 325.0
margin_top = 31.0
margin_right = 1600.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.858824, 0.807843, 0.0588235, 1 )
text = "JET CUSTOMIZATIONS
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreyBird" type="Button" parent="Control"]
margin_left = 156.0
margin_top = 316.0
margin_right = 448.0
margin_bottom = 528.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/GreyBird"]
position = Vector2( 3, 33.215 )
scale = Vector2( 0.225, 0.3 )
texture = ExtResource( 4 )
centered = false

[node name="Label" type="Label" parent="Control/GreyBird"]
margin_left = 20.0
margin_top = 160.0
margin_right = 270.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GREY BIRD"
align = 1

[node name="RedDemon" type="Button" parent="Control"]
margin_left = 597.318
margin_top = 316.0
margin_right = 889.318
margin_bottom = 528.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/RedDemon"]
position = Vector2( 2, 33.215 )
scale = Vector2( 0.225, 0.3 )
texture = ExtResource( 5 )
centered = false

[node name="Label" type="Label" parent="Control/RedDemon"]
margin_left = 20.0
margin_top = 160.0
margin_right = 270.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "RED DEMON"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueDragon" type="Button" parent="Control"]
margin_left = 1031.95
margin_top = 316.0
margin_right = 1323.95
margin_bottom = 528.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/BlueDragon"]
position = Vector2( 2, 33.215 )
scale = Vector2( 0.225, 0.3 )
texture = ExtResource( 6 )
centered = false

[node name="Label" type="Label" parent="Control/BlueDragon"]
margin_left = 20.0
margin_top = 160.0
margin_right = 270.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "BLUE DRAGON"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletLabel" type="Label" parent="Control"]
margin_left = 145.0
margin_top = 563.929
margin_right = 651.0
margin_bottom = 667.929
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.721569, 0.0862745, 0.0235294, 1 )
text = "LASER SKINS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedLaser" type="Button" parent="Control"]
margin_left = 154.49
margin_top = 676.639
margin_right = 344.49
margin_bottom = 855.639
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/RedLaser"]
position = Vector2( 4.23761, 28.9823 )
scale = Vector2( 0.6, 0.4 )
texture = ExtResource( 7 )
centered = false

[node name="Label" type="Label" parent="Control/RedLaser"]
margin_left = 17.0
margin_top = 127.0
margin_right = 166.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 16 )
text = "RED"
align = 1

[node name="BlueLaser" type="Button" parent="Control"]
margin_left = 414.155
margin_top = 676.639
margin_right = 604.155
margin_bottom = 855.639
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/BlueLaser"]
position = Vector2( 4.238, 28.982 )
scale = Vector2( 0.6, 0.4 )
texture = ExtResource( 8 )
centered = false

[node name="Label" type="Label" parent="Control/BlueLaser"]
margin_left = 17.0
margin_top = 127.0
margin_right = 166.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 16 )
text = "Blue"
align = 1

[node name="GreenLaser" type="Button" parent="Control"]
margin_left = 676.642
margin_top = 676.639
margin_right = 866.642
margin_bottom = 855.639
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/GreenLaser"]
position = Vector2( 4.238, 28.982 )
scale = Vector2( 0.6, 0.4 )
texture = ExtResource( 9 )
centered = false

[node name="Label" type="Label" parent="Control/GreenLaser"]
margin_left = 17.0
margin_top = 127.0
margin_right = 166.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 16 )
text = "Green"
align = 1

[node name="BackButton" type="Button" parent="Control"]
margin_left = 34.0179
margin_top = 27.7183
margin_right = 334.018
margin_bottom = 137.718
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="Control"]
margin_left = 1571.18
margin_top = 830.387
margin_right = 1854.18
margin_bottom = 921.388
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
icon = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetCoins" type="Button" parent="Control"]
margin_left = 972.0
margin_top = 676.639
margin_right = 1180.0
margin_bottom = 846.639
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/GetCoins"]
position = Vector2( 0, 20 )
scale = Vector2( 0.5, 0.7 )
texture = ExtResource( 12 )
centered = false

[node name="Label" type="Label" parent="Control/GetCoins"]
margin_left = 11.8621
margin_top = 93.9078
margin_right = 195.862
margin_bottom = 136.908
custom_fonts/font = SubResource( 27 )
text = "GET 300 COINS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinTagSprite" type="Sprite" parent="Control"]
position = Vector2( 1391.92, 769.071 )
scale = Vector2( 0.812711, 0.812712 )
texture = ExtResource( 14 )

[node name="CoinTagLabel" type="Label" parent="Control"]
margin_left = 1433.39
margin_top = 711.855
margin_right = 1473.39
margin_bottom = 801.855
custom_fonts/font = SubResource( 28 )
custom_colors/font_color = Color( 0.94902, 0.0235294, 0.0235294, 1 )
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinAmountLabel" type="Label" parent="Control"]
margin_left = 1470.98
margin_top = 675.089
margin_right = 1912.98
margin_bottom = 825.089
custom_fonts/font = SubResource( 29 )
custom_colors/font_color = Color( 0.980392, 0.141176, 0.0313726, 1 )
text = "0"
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="Control"]
script = ExtResource( 21 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-9093002613352397/9703314252"
interstitial_id = "ca-app-pub-9093002613352397/4401642844"
rewarded_id = "ca-app-pub-9093002613352397/2049127463"

[node name="JetskinsPopup" type="PopupMenu" parent="."]
margin_left = 648.194
margin_top = 271.0
margin_right = 1201.19
margin_bottom = 786.0
custom_styles/labeled_separator_left = ExtResource( 17 )
custom_styles/hover = ExtResource( 17 )
custom_styles/panel = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="Button" parent="JetskinsPopup"]
margin_left = 21.347
margin_top = 10.673
margin_right = 92.347
margin_bottom = 78.673
icon = ExtResource( 18 )
flat = true

[node name="UnlockButton" type="Button" parent="JetskinsPopup"]
margin_left = 42.0
margin_top = 111.0
margin_right = 500.0
margin_bottom = 312.0
custom_styles/hover = ExtResource( 19 )
custom_styles/pressed = SubResource( 30 )
custom_styles/normal = ExtResource( 19 )
custom_fonts/font = SubResource( 31 )
text = "Unlock"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnlockLabel" type="Label" parent="JetskinsPopup"]
margin_left = 114.628
margin_top = 255.255
margin_right = 418.628
margin_bottom = 329.255
custom_fonts/font = SubResource( 32 )
custom_colors/font_color = Color( 0.890196, 0.843137, 0.121569, 1 )
text = "500 COINS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectButton" type="Button" parent="JetskinsPopup"]
margin_left = 152.0
margin_top = 356.0
margin_right = 366.0
margin_bottom = 456.0
custom_styles/hover = ExtResource( 19 )
custom_styles/pressed = SubResource( 33 )
custom_styles/normal = ExtResource( 19 )
custom_fonts/font = SubResource( 34 )
text = "SELECT"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/GreyBird" to="." method="_on_GreyBird_pressed"]
[connection signal="pressed" from="Control/RedDemon" to="." method="_on_RedDemon_pressed"]
[connection signal="pressed" from="Control/BlueDragon" to="." method="_on_BlueDragon_pressed"]
[connection signal="pressed" from="Control/RedLaser" to="." method="_on_RedLaser_pressed"]
[connection signal="pressed" from="Control/BlueLaser" to="." method="_on_BlueLaser_pressed"]
[connection signal="pressed" from="Control/GreenLaser" to="." method="_on_GreenLaser_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Control/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Control/GetCoins" to="." method="_on_GetCoins_pressed"]
[connection signal="rewarded" from="Control/AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="pressed" from="JetskinsPopup/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="JetskinsPopup/UnlockButton" to="." method="_on_UnlockButton_pressed"]
[connection signal="pressed" from="JetskinsPopup/SelectButton" to="." method="_on_SelectButton_pressed"]
